[gd_scene load_steps=7 format=3 uid="uid://dfyl3xkj6qdo1"]

[ext_resource type="PackedScene" uid="uid://c7u1gt30hay88" path="res://assets/blender/WindSpeedCircle.blend" id="1_8e47e"]
[ext_resource type="Script" uid="uid://b6nigney6ibiy" path="res://boat_ui_wind/wind_speed_circle.gd" id="2_tt45e"]
[ext_resource type="Script" uid="uid://bdjmdpqg5a5gt" path="res://boat_ui_wind/plane_001.gd" id="3_5jhgy"]
[ext_resource type="PackedScene" uid="uid://qdc8nnf556a0" path="res://draw_line/draw_line.tscn" id="4_5jhgy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5jhgy"]
emission_enabled = true
emission = Color(0, 1, 0.0166667, 1)
emission_energy_multiplier = 3.0

[sub_resource type="PrismMesh" id="PrismMesh_5jhgy"]
material = SubResource("StandardMaterial3D_5jhgy")

[node name="WindSpeedCircle" instance=ExtResource("1_8e47e")]
script = ExtResource("2_tt45e")

[node name="SpeedRayCast" type="RayCast3D" parent="." index="0"]
target_position = Vector3(0, 0, -20)
collision_mask = 512

[node name="Plane_001" parent="." index="1"]
script = ExtResource("3_5jhgy")

[node name="DrawLine" parent="." index="2" instance=ExtResource("4_5jhgy")]
material_override = SubResource("StandardMaterial3D_5jhgy")

[node name="ArrowHead" type="Node3D" parent="." index="3"]

[node name="Mesh" type="MeshInstance3D" parent="ArrowHead" index="0"]
transform = Transform3D(-1, -1.50996e-07, 1.32005e-16, 0, -4.37114e-08, -0.02, 1.50996e-07, -1, 8.74228e-10, 0, -0.00172642, 0.455853)
mesh = SubResource("PrismMesh_5jhgy")
skeleton = NodePath("../..")
